Updated styling on homepage to fix mobile layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -75,33 +75,34 @@ a[href]:visited {
   color: var(--text-color-link-visited);
 }
 
-.main {
+.hero {
   background: url("/img/hero.svg")no-repeat;
-  background-size: contain;
-  background-position: right;
+  background-size: auto;
   width: 100%;
   height: 90vh;
 }
 
+
 @media only screen and (max-width: 480px) {
-  .main {
+  .hero {
     background: url("/img/hero.svg")no-repeat;
-    background-size: contain;
+    background-size:calc(100% - 50px);
     background-position: bottom;
     width: 100%;
-    height: 90vh;
+    height: 50vh;
   }
   }
 
   @media only screen and ((min-width: 768px) and (max-width: 1024px)) {
-    .main {
+    .hero {
       background: url("/img/hero.svg")no-repeat;
       background-size: auto;
       background-position: bottom;
       width: 100%;
-      height: 90vh;
+      height: 50vh;
     }
     }
+
 
 .main h3 {
   font-size: 4.4rem;
